--- a/cruciatus.html
+++ b/cruciatus.html
@@ -35,12 +35,12 @@
     <main class="contenido">
       <div class="texto">
         <p>
-        Cruciâtus Sonante es un proyecto musical progresivo instrumental confomarmado por Matias (guitarra y bateria programada) y Felipe (bajo y bateria programada), nace por la necesidad de los primcipales compositores de Efecto Paradoja
-        de dar rienda suelta a sus ideas musicales mas complejas que no tenian cabida en el formato más rock de dicha agrupacion.
+        Cruciâtus Sonante es un proyecto progresivo instrumental confomarmado por Matias (guitarra y bateria programada) y Felipe (bajo y bateria programada), nace por la necesidad de los principales compositores de Efecto Paradoja
+        de dar rienda suelta a sus ideas musicales mas complejas que no tenian cabida en el formato más rock de dicha agrupación.
         </p>
       </div>
 
-      <img class="fotito" src="assets/img/cruciatus.png" alt="fetal progeria" />
+      <img class="fotito" src="assets/img/cruciatus.png" alt="cruciatus sonante logo" />
     </main>
 
     <footer class="piepagina">Cruciâtus Sonante 2026</footer>
