--- a/index.html
+++ b/index.html
@@ -1,19 +1,26 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Indice</title>
-    <link rel="stylesheet" href="assets/styles/style.css">
-</head>
-<body>
-
-<a href="paradoja.html" ><img src="assets/img/paradoja.jpg" alt="Descripción"></a>
-<a href="cruciatus.html" ><img src="assets/img/cruciatus.png" alt="Descripción"></a>
-<a href="progeria.html" ><img src="assets/img/fetal.png" alt="Descripción"></a>
-<a href="pajaros.html" ><img src="assets/img/pajaros.png" alt="Descripción"></a>
-<a href="otros.html" ><img src="assets/img/otros.png" alt="Descripción"></a>
-
-    
-</body>
+    <link rel="stylesheet" href="assets/styles/style.css" />
+  </head>
+  <body>
+    <a href="paradoja.html"
+      ><img src="assets/img/paradoja.jpg" alt="Descripción"
+    /></a>
+    <a href="cruciatus.html"
+      ><img src="assets/img/cruciatus.png" alt="Descripción"
+    /></a>
+    <a href="progeria.html"
+      ><img src="assets/img/fetal.png" alt="Descripción"
+    /></a>
+    <a href="pajaros.html"
+      ><img src="assets/img/pajaros.png" alt="Descripción"
+    /></a>
+    <a href="otros.html"
+      ><img src="assets/img/otros.png" alt="Descripción"
+    /></a>
+  </body>
 </html>
