--- a/cruciatusfotos.html
+++ b/cruciatusfotos.html
@@ -28,6 +28,10 @@
     <main class="fotos">
   
 
+<a href="assets/img/474715_10151626563569291_1249723126_o.jpg"
+          ><img class="foto" src="assets/img/474715_10151626563569291_1249723126_o.jpg" alt=""
+        /></a>
+
       <p>Logo</p>
       <div>
         <a href="assets/img/fetexcrucitos.png"
